update with halal

--- a/src/index.html
+++ b/src/index.html
@@ -296,17 +296,18 @@
       </ul>
     </nav>
     <div class="user-sec">
-      <a href="" data-popup-open="" class="login-btn" onClick="logoutFun('account');">
+      <!-- <a href="" data-popup-open="" class="login-btn" onClick="logoutFun('account');"> -->
 
       </a>
       <!--<button type="button" name="" value="" class="cart-btn">Cart</button>-->
-      <button type="button" name="" value="" data-popup-open="popup-1" class="search-btn"></button>
+      <!-- <button type="button" name="" value="" data-popup-open="popup-1" class="search-btn"></button> -->
       <!--<button type="button" name="" value="" data-popup-open="">Logout</button>-->
-      <a href="" data-popup-open="" class="logout-btn" onClick="logoutFun('logout');">Logout</a>
+      <!-- <a href="" data-popup-open="" class="logout-btn" onClick="logoutFun('logout');">Logout</a> -->
 
       <button type="button" name="" value="" data-popup-open="popup-2" class="login-btn">Login</button>
-      <button type="button" name="" value="" class="cart-btn">Cart</button>
-      <button type="button" name="" value="" data-popup-open="popup-1" class="search-btn"></button>
+      <button type="button" name="" value="" data-popup-open="popup-2" class="login-btn">Register</button>
+      <!-- <button type="button" name="" value="" class="cart-btn">Cart</button> -->
+      <!-- <button type="button" name="" value="" data-popup-open="popup-1" class="search-btn"></button> -->
     </div>
   </div>
 </header>
